# mobie-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.github/workflows/: release.yml
apps/mobie/: Cargo.toml
apps/mobie/src/: cache.rs  main.rs  session_store.rs
apps/mobie/tests/: cache.rs  cli.rs  cli_json.rs
crates/mobie_api/: Cargo.toml
crates/mobie_api/src/: client.rs  error.rs
crates/mobie_api/tests/: client_errors.rs  headers.rs  pagination.rs  refresh.rs  retries.rs  timeouts.rs  tokens.rs
crates/mobie_api/tests/fixtures/: sessions-page-1.json  sessions-page-2.json  sessions-page-empty.json
crates/mobie_models/: Cargo.toml
crates/mobie_models/src/: types.rs
crates/mobie_models/tests/: dto.rs
crates/mobie_models/tests/fixtures/: locations.json  login-response.json  ocpp-logs.json  sessions-page.json
docs/: mobie-api.md  openapi.yaml
docs/plans/: 2026-03-06-cache-design.md  2026-03-06-cache-implementation-plan.md  2026-03-08-cli-normalization.md
scripts/: mobie-version.sh  package-release.sh
