[workspace]
resolver = "2"
members = [
  "crates/mobie_models",
  "crates/mobie_api",
  "apps/mobie",
]

[workspace.package]
edition = "2024"
license = "ISC"

[workspace.dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12.9", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
rpassword = "7.3.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.9"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
wiremock = "0.6.5"
