[package]
name = "mobie"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Standalone CLI for querying the MOBIE API"
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
mobie_api = { path = "../../crates/mobie_api" }
mobie_models = { path = "../../crates/mobie_models" }
chrono.workspace = true
clap.workspace = true
directories.workspace = true
keyring.workspace = true
rpassword.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
wiremock.workspace = true
