[package]
name = "mobie_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mobie_models = { path = "../mobie_models" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio.workspace = true
